# contrast_max_cpp

./: CMakeLists.txt  build.sh
lib/: CMakeLists.txt  theia-pld-contrastmax.hpp  theia-pld-filereader.hpp
src/: main.cpp
